# atha.yoga

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.exaple  .gitignore  Dockerfile  Pipfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/atha_yoga/: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/atha_yoga/atha_yoga/: asgi.py  settings.py  urls.py  wsgi.py
backend/cofig/db/: .env.example
backend/core/: urls.py
backend/core/app/handlers/: teachers_questionnaire_handlers.py  user_handlers.py  (+1 more)
backend/core/migrations/: 0007_user_favorites.py
backend/courses/: models.py
backend/lessons/: apps.py  documents.py  models.py  urls.py
backend/lessons/migrations/: 0001_initial.py  0002_alter_comment_options_alter_lesson_options_and_more.py  0003_remove_lesson_duration.py  0004_lesson_duration.py  0005_alter_lesson_description.py  0006_lesson_deadline_datetime_lesson_link_and_more.py  0007_remove_lesson_cost_alter_lesson_price.py  0008_alter_comment_options_alter_lesson_options_and_more.py  0009_lesson_favorites.py  0010_remove_comment_updated_at_comment_polymorphic_ctype_and_more.py  0011_remove_comment_lesson_lessoncomment.py  0012_review_lessonreview.py  0013_review_created_at_review_updated_at_alter_review_id.py  0014_remove_schedule_start_time_remove_schedule_weekday_and_more.py
backend/lessons/seeders/: lesson_comment_seeder.py
backend/server/: settings.py
backend/server/server/: settings.py
backend/yoga/: manage.py
backend/yoga/yoga/: settings.py  urls.py  wsgi.py
(+47 files in other folders)
