[tool.poetry]
name = "Atha.Yoga"
version = "0.1.0"
description = ""
authors = ["foliageh <mygazztop1@gmail.com>"]
packages = [{include = "atha_yoga"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
drf-spectacular = "^0.24.2"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
