[tool.poetry]
name = "atha-yoga"
version = "0.1.0"
description = ""
authors = ["Artyom Podgorny <azaztllo2015@yandex.ru>"]
readme = "README.md"
packages = [{include = "atha_yoga"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-dotenv = "^0.21.0"
drf-spectacular = "^0.24.2"
psycopg2-binary = "^2.9.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
